[package]
name = "finality-grandpa"
version = "0.13.0"
description = "PBFT-based finality gadget for blockchains"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/finality-grandpa"
edition = "2018"

[dependencies]
either = { version = "1.6.1", default-features = false }
futures = { version = "0.3.8", default-features = false, features = ["async-await"] }
futures-timer = { version = "3.0.2", optional = true }
log = { version = "0.4.11", optional = true }
num = { package = "num-traits", version = "0.2.14", default-features = false }
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
parking_lot = "0.11.1"
quickcheck = "0.9.2"
rand = "0.7.3"

[features]
default = ["std"]
std = [
	"futures-timer",
	"futures/executor",
	"futures/std",
	"log",
	"num/std",
	"parity-scale-codec/std",
]
derive-codec = ["parity-scale-codec"]
test-helpers = ["fuzz-helpers", "std"]
fuzz-helpers = []
