[package]
name = "tetsy-finality-grandpa"
version = "0.13.0"
description = "Tetsy PBFT-based finality gadget for blockchains"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "Apache-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-finality-grandpa"
documentation = "https://docs.rs/tetsy-finality-grandpa"
edition = "2018"

[dependencies]
either = { version = "1.6", default-features = false }
futures = { version = "0.3", default-features = false }
futures-timer = { version = "3.0", optional = true }
log = { version = "0.4", optional = true }
num = { package = "num-traits", version = "0.2", default-features = false }
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"], optional = true }
parking_lot = { version = "0.11", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
quickcheck = "1.0"
rand = "0.8"

[features]
default = ["std"]
std = ["tetsy-scale-codec/std", "num/std", "parking_lot", "log", "futures-timer", "futures/executor"]
derive-codec = ["tetsy-scale-codec"]
test-helpers = ["fuzz-helpers", "rand", "std"]
fuzz-helpers = []
